# EmeraldEngine

./: .gitignore  CMakeLists.txt  README.md  codecov.yml  conanfile.txt
.github/workflows/: Codecov.yml  c-cpp.yml
include/: Log.h  Platform.h
include/Assets/: IAsset.h
include/ECS/: API.h  Component.h  ComponentManager.h  ECS.h  Entity.h  EntityManager.h  IComponent.h  IEntity.h  ISystem.h  System.h  SystemManager.h
include/ECS/Event/: Event.h  EventDelegate.h  EventDispatcher.h  EventHandler.h  IEvent.h  IEventDispatcher.h  IEventListener.h
include/ECS/Serialization/: ComponentFactory.h  EntityFactory.h  IBinarySerialize.h  ISerialize.h
include/ECS/Utils/: FamilyTypeID.h  Handle.h  Timer.h
include/Engine/: Engine.h
include/Engine/Components/: Camera.h  MaterialComponent.h  Transform.h
include/Engine/Systems/: RenderSystem.h
include/Memory/: GlobalMemoryUser.h  MemoryManager.h
include/Memory/Allocator/: IAllocator.h  LinearAllocator.h  ListLinearAllocator.h  MemoryChunkAllocator.h  PoolAllocator.h  StackAllocator.h
include/Render/: IRenderFeature.h  IRenderPass.h  IRenderPipeline.h  Material.h  ShaderTools.h
include/Utils/: Singleton.h  glm.h  json.h
src/: Log.cpp  main.cpp
src/ECS/: ComponentManager.cpp  EntityManager.cpp  IComponent.cpp  IEntity.cpp  ISystem.cpp  SystemManager.cpp
src/ECS/Event/: EventHandler.cpp  IEvent.cpp  IEventListener.cpp
src/ECS/Utils/: FamilyTypeID.cpp  Timer.cpp
src/Engine/: Engine.cpp
src/Engine/Components/: Camera.cpp  MaterialComponent.cpp  Transform.cpp
src/Engine/Systems/: RenderSystem.cpp
src/Memory/: GlobalMemoryUser.cpp  MemoryManager.cpp
src/Memory/Allocator/: IAllocator.cpp  LinearAllocator.cpp  ListLinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
src/Render/: Material.cpp  ShaderTools.cpp
src/Utils/: json.cpp
tests/: Allocators.h  Assets.h  Component.h  Entity.h  Event.h  FinishCleanup.h  Material.h  MemoryCommon.h  Singleton.h  System.h  Transform.h  Utils.h  test.cpp
